Update and rename reject-failed-and-non-acr.yaml to reject-failed.yaml

--- a/demo/10-container-admission-policy/reject-failed.yaml
+++ b/demo/10-container-admission-policy/reject-failed.yaml
@@ -1,7 +1,7 @@
 apiVersion: containersecurity.tigera.io/v1beta1
 kind: ContainerAdmissionPolicy
 metadata:
-  name: reject-failed-and-non-acr
+  name: reject-failed
 spec:
   selector: all()
   namespaceSelector: "apply-container-policies == 'true'"
